--- a/report/report.xml
+++ b/report/report.xml
@@ -1,66 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testsuites>
-  <testsuite name="Project Test Suite" tests="38" assertions="71" failures="0" errors="0" time="9.619009">
-    <testsuite name="Tests\Command\AddUserCommandTest" file="/var/www/html/symjenk/tests/AppBundle/Command/AddUserCommandTest.php" tests="4" assertions="20" failures="0" errors="0" time="3.576876">
-      <testsuite name="Tests\Command\AddUserCommandTest::testCreateUserNonInteractive" tests="2" assertions="10" failures="0" errors="0" time="1.796499">
-        <testcase name="testCreateUserNonInteractive with data set #0" assertions="5" time="0.924195"/>
-        <testcase name="testCreateUserNonInteractive with data set #1" assertions="5" time="0.872304"/>
-      </testsuite>
-      <testsuite name="Tests\Command\AddUserCommandTest::testCreateUserInteractive" tests="2" assertions="10" failures="0" errors="0" time="1.780377">
-        <testcase name="testCreateUserInteractive with data set #0" assertions="5" time="0.880857"/>
-        <testcase name="testCreateUserInteractive with data set #1" assertions="5" time="0.899520"/>
+  <testsuite name="Project Test Suite" tests="36" assertions="61" failures="0" errors="0" time="13.081960">
+    <testsuite name="Tests\Command\AddUserCommandTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Command\AddUserCommandTest.php" tests="2" assertions="10" failures="0" errors="0" time="2.562938">
+      <testsuite name="Tests\Command\AddUserCommandTest::testCreateUserNonInteractive" tests="2" assertions="10" failures="0" errors="0" time="2.562938">
+        <testcase name="testCreateUserNonInteractive with data set #0" assertions="5" time="1.361679"/>
+        <testcase name="testCreateUserNonInteractive with data set #1" assertions="5" time="1.201259"/>
       </testsuite>
     </testsuite>
-    <testsuite name="Tests\AppBundle\Controller\Admin\BlogControllerTest" file="/var/www/html/symjenk/tests/AppBundle/Controller/Admin/BlogControllerTest.php" tests="9" assertions="15" failures="0" errors="0" time="5.079589">
-      <testsuite name="Tests\AppBundle\Controller\Admin\BlogControllerTest::testAccessDeniedForRegularUsers" tests="4" assertions="4" failures="0" errors="0" time="2.439189">
-        <testcase name="testAccessDeniedForRegularUsers with data set #0" assertions="1" time="0.655432"/>
-        <testcase name="testAccessDeniedForRegularUsers with data set #1" assertions="1" time="0.586438"/>
-        <testcase name="testAccessDeniedForRegularUsers with data set #2" assertions="1" time="0.597431"/>
-        <testcase name="testAccessDeniedForRegularUsers with data set #3" assertions="1" time="0.599888"/>
+    <testsuite name="Tests\AppBundle\Controller\Admin\BlogControllerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Controller\Admin\BlogControllerTest.php" tests="9" assertions="15" failures="0" errors="0" time="8.625520">
+      <testsuite name="Tests\AppBundle\Controller\Admin\BlogControllerTest::testAccessDeniedForRegularUsers" tests="4" assertions="4" failures="0" errors="0" time="3.859650">
+        <testcase name="testAccessDeniedForRegularUsers with data set #0" assertions="1" time="1.131961"/>
+        <testcase name="testAccessDeniedForRegularUsers with data set #1" assertions="1" time="0.907856"/>
+        <testcase name="testAccessDeniedForRegularUsers with data set #2" assertions="1" time="0.909596"/>
+        <testcase name="testAccessDeniedForRegularUsers with data set #3" assertions="1" time="0.910237"/>
       </testsuite>
-      <testcase name="testAdminBackendHomePage" class="Tests\AppBundle\Controller\Admin\BlogControllerTest" file="/var/www/html/symjenk/tests/AppBundle/Controller/Admin/BlogControllerTest.php" line="60" assertions="2" time="0.520675"/>
-      <testcase name="testAdminNewPost" class="Tests\AppBundle\Controller\Admin\BlogControllerTest" file="/var/www/html/symjenk/tests/AppBundle/Controller/Admin/BlogControllerTest.php" line="83" assertions="4" time="0.567120"/>
-      <testcase name="testAdminShowPost" class="Tests\AppBundle\Controller\Admin\BlogControllerTest" file="/var/www/html/symjenk/tests/AppBundle/Controller/Admin/BlogControllerTest.php" line="111" assertions="1" time="0.494108"/>
-      <testcase name="testAdminEditPost" class="Tests\AppBundle\Controller\Admin\BlogControllerTest" file="/var/www/html/symjenk/tests/AppBundle/Controller/Admin/BlogControllerTest.php" line="128" assertions="2" time="0.529682"/>
-      <testcase name="testAdminDeletePost" class="Tests\AppBundle\Controller\Admin\BlogControllerTest" file="/var/www/html/symjenk/tests/AppBundle/Controller/Admin/BlogControllerTest.php" line="155" assertions="2" time="0.528815"/>
+      <testcase name="testAdminBackendHomePage" class="Tests\AppBundle\Controller\Admin\BlogControllerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Controller\Admin\BlogControllerTest.php" line="60" assertions="2" time="0.826527"/>
+      <testcase name="testAdminNewPost" class="Tests\AppBundle\Controller\Admin\BlogControllerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Controller\Admin\BlogControllerTest.php" line="83" assertions="4" time="1.211936"/>
+      <testcase name="testAdminShowPost" class="Tests\AppBundle\Controller\Admin\BlogControllerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Controller\Admin\BlogControllerTest.php" line="111" assertions="1" time="0.785691"/>
+      <testcase name="testAdminEditPost" class="Tests\AppBundle\Controller\Admin\BlogControllerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Controller\Admin\BlogControllerTest.php" line="128" assertions="2" time="1.059525"/>
+      <testcase name="testAdminDeletePost" class="Tests\AppBundle\Controller\Admin\BlogControllerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Controller\Admin\BlogControllerTest.php" line="155" assertions="2" time="0.882191"/>
     </testsuite>
-    <testsuite name="Tests\AppBundle\Controller\BlogControllerTest" file="/var/www/html/symjenk/tests/AppBundle/Controller/BlogControllerTest.php" tests="3" assertions="6" failures="0" errors="0" time="0.666965">
-      <testcase name="testIndex" class="Tests\AppBundle\Controller\BlogControllerTest" file="/var/www/html/symjenk/tests/AppBundle/Controller/BlogControllerTest.php" line="33" assertions="1" time="0.081101"/>
-      <testcase name="testRss" class="Tests\AppBundle\Controller\BlogControllerTest" file="/var/www/html/symjenk/tests/AppBundle/Controller/BlogControllerTest.php" line="45" assertions="2" time="0.022375"/>
-      <testcase name="testNewComment" class="Tests\AppBundle\Controller\BlogControllerTest" file="/var/www/html/symjenk/tests/AppBundle/Controller/BlogControllerTest.php" line="68" assertions="3" time="0.563489"/>
+    <testsuite name="Tests\AppBundle\Controller\BlogControllerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Controller\BlogControllerTest.php" tests="3" assertions="6" failures="0" errors="0" time="1.126990">
+      <testcase name="testIndex" class="Tests\AppBundle\Controller\BlogControllerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Controller\BlogControllerTest.php" line="33" assertions="1" time="0.167741"/>
+      <testcase name="testRss" class="Tests\AppBundle\Controller\BlogControllerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Controller\BlogControllerTest.php" line="45" assertions="2" time="0.081550"/>
+      <testcase name="testNewComment" class="Tests\AppBundle\Controller\BlogControllerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Controller\BlogControllerTest.php" line="68" assertions="3" time="0.877699"/>
     </testsuite>
-    <testsuite name="Tests\AppBundle\Controller\DefaultControllerTest" file="/var/www/html/symjenk/tests/AppBundle/Controller/DefaultControllerTest.php" tests="8" assertions="12" failures="0" errors="0" time="0.288960">
-      <testsuite name="Tests\AppBundle\Controller\DefaultControllerTest::testPublicUrls" tests="3" assertions="3" failures="0" errors="0" time="0.167311">
-        <testcase name="testPublicUrls with data set #0" assertions="1" time="0.017803"/>
-        <testcase name="testPublicUrls with data set #1" assertions="1" time="0.106525"/>
-        <testcase name="testPublicUrls with data set #2" assertions="1" time="0.042983"/>
+    <testsuite name="Tests\AppBundle\Controller\DefaultControllerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Controller\DefaultControllerTest.php" tests="8" assertions="12" failures="0" errors="0" time="0.741212">
+      <testsuite name="Tests\AppBundle\Controller\DefaultControllerTest::testPublicUrls" tests="3" assertions="3" failures="0" errors="0" time="0.348128">
+        <testcase name="testPublicUrls with data set #0" assertions="1" time="0.099707"/>
+        <testcase name="testPublicUrls with data set #1" assertions="1" time="0.121954"/>
+        <testcase name="testPublicUrls with data set #2" assertions="1" time="0.126467"/>
       </testsuite>
-      <testcase name="testPublicBlogPost" class="Tests\AppBundle\Controller\DefaultControllerTest" file="/var/www/html/symjenk/tests/AppBundle/Controller/DefaultControllerTest.php" line="56" assertions="1" time="0.063482"/>
-      <testsuite name="Tests\AppBundle\Controller\DefaultControllerTest::testSecureUrls" tests="4" assertions="8" failures="0" errors="0" time="0.058167">
-        <testcase name="testSecureUrls with data set #0" assertions="2" time="0.015773"/>
-        <testcase name="testSecureUrls with data set #1" assertions="2" time="0.013602"/>
-        <testcase name="testSecureUrls with data set #2" assertions="2" time="0.014152"/>
-        <testcase name="testSecureUrls with data set #3" assertions="2" time="0.014640"/>
+      <testcase name="testPublicBlogPost" class="Tests\AppBundle\Controller\DefaultControllerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Controller\DefaultControllerTest.php" line="56" assertions="1" time="0.112631"/>
+      <testsuite name="Tests\AppBundle\Controller\DefaultControllerTest::testSecureUrls" tests="4" assertions="8" failures="0" errors="0" time="0.280453">
+        <testcase name="testSecureUrls with data set #0" assertions="2" time="0.068424"/>
+        <testcase name="testSecureUrls with data set #1" assertions="2" time="0.072433"/>
+        <testcase name="testSecureUrls with data set #2" assertions="2" time="0.072046"/>
+        <testcase name="testSecureUrls with data set #3" assertions="2" time="0.067550"/>
       </testsuite>
     </testsuite>
-    <testsuite name="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="/var/www/html/symjenk/tests/AppBundle/Form/DataTransformer/TagArrayToStringTransformerTest.php" tests="6" assertions="10" failures="0" errors="0" time="0.005843">
-      <testcase name="testCreateTheRightAmountOfTags" class="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="/var/www/html/symjenk/tests/AppBundle/Form/DataTransformer/TagArrayToStringTransformerTest.php" line="29" assertions="2" time="0.004494"/>
-      <testcase name="testCreateTheRightAmountOfTagsWithTooManyCommas" class="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="/var/www/html/symjenk/tests/AppBundle/Form/DataTransformer/TagArrayToStringTransformerTest.php" line="41" assertions="2" time="0.000291"/>
-      <testcase name="testTrimNames" class="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="/var/www/html/symjenk/tests/AppBundle/Form/DataTransformer/TagArrayToStringTransformerTest.php" line="52" assertions="1" time="0.000209"/>
-      <testcase name="testDuplicateNames" class="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="/var/www/html/symjenk/tests/AppBundle/Form/DataTransformer/TagArrayToStringTransformerTest.php" line="62" assertions="1" time="0.000216"/>
-      <testcase name="testUsesAlreadyDefinedTags" class="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="/var/www/html/symjenk/tests/AppBundle/Form/DataTransformer/TagArrayToStringTransformerTest.php" line="72" assertions="3" time="0.000317"/>
-      <testcase name="testTransform" class="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="/var/www/html/symjenk/tests/AppBundle/Form/DataTransformer/TagArrayToStringTransformerTest.php" line="89" assertions="1" time="0.000316"/>
+    <testsuite name="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest.php" tests="6" assertions="10" failures="0" errors="0" time="0.024739">
+      <testcase name="testCreateTheRightAmountOfTags" class="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest.php" line="29" assertions="2" time="0.024056"/>
+      <testcase name="testCreateTheRightAmountOfTagsWithTooManyCommas" class="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest.php" line="41" assertions="2" time="0.000192"/>
+      <testcase name="testTrimNames" class="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest.php" line="52" assertions="1" time="0.000127"/>
+      <testcase name="testDuplicateNames" class="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest.php" line="62" assertions="1" time="0.000124"/>
+      <testcase name="testUsesAlreadyDefinedTags" class="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest.php" line="72" assertions="3" time="0.000138"/>
+      <testcase name="testTransform" class="Tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Form\DataTransformer\TagArrayToStringTransformerTest.php" line="89" assertions="1" time="0.000102"/>
     </testsuite>
-    <testsuite name="Tests\AppBundle\Utils\SluggerTest" file="/var/www/html/symjenk/tests/AppBundle/Utils/SluggerTest.php" tests="8" assertions="8" failures="0" errors="0" time="0.000776">
-      <testsuite name="Tests\AppBundle\Utils\SluggerTest::testSlugify" tests="8" assertions="8" failures="0" errors="0" time="0.000776">
-        <testcase name="testSlugify with data set #0" assertions="1" time="0.000121"/>
-        <testcase name="testSlugify with data set #1" assertions="1" time="0.000083"/>
-        <testcase name="testSlugify with data set #2" assertions="1" time="0.000093"/>
-        <testcase name="testSlugify with data set #3" assertions="1" time="0.000077"/>
-        <testcase name="testSlugify with data set #4" assertions="1" time="0.000162"/>
-        <testcase name="testSlugify with data set #5" assertions="1" time="0.000079"/>
-        <testcase name="testSlugify with data set #6" assertions="1" time="0.000080"/>
-        <testcase name="testSlugify with data set #7" assertions="1" time="0.000081"/>
+    <testsuite name="Tests\AppBundle\Utils\SluggerTest" file="C:\xampp\htdocs\symjenk\tests\AppBundle\Utils\SluggerTest.php" tests="8" assertions="8" failures="0" errors="0" time="0.000560">
+      <testsuite name="Tests\AppBundle\Utils\SluggerTest::testSlugify" tests="8" assertions="8" failures="0" errors="0" time="0.000560">
+        <testcase name="testSlugify with data set #0" assertions="1" time="0.000079"/>
+        <testcase name="testSlugify with data set #1" assertions="1" time="0.000057"/>
+        <testcase name="testSlugify with data set #2" assertions="1" time="0.000053"/>
+        <testcase name="testSlugify with data set #3" assertions="1" time="0.000052"/>
+        <testcase name="testSlugify with data set #4" assertions="1" time="0.000049"/>
+        <testcase name="testSlugify with data set #5" assertions="1" time="0.000051"/>
+        <testcase name="testSlugify with data set #6" assertions="1" time="0.000110"/>
+        <testcase name="testSlugify with data set #7" assertions="1" time="0.000109"/>
       </testsuite>
     </testsuite>
   </testsuite>
